--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Destino:</th>
-                                <th class="text-center">JOHANNESBURG</th>
+                                <th class="text-center">DURBAN</th>
                               </tr>
                             </tbody>
                           </table>
